# dbus-sender

./: CMakeLists.txt  README.md  build.sh
src/lib/internal/: main.cpp  registrator.cpp  registrator.h
src/testapp/: main.cpp
